# fastapi_test

./: .dockerignore  .gitignore  Dockerfile  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: authentication.py  dependencies.py  messages.py  users.py
db/: database.py  storage.py
docker/app/: Dockerfile
docker/fastapi_test/: Dockerfile
docker/redis/: Dockerfile
models/: users.py
routes/: authentication.py  chat.py  user.py
schemas/: messages.py  users.py
services/: messages.py  users.py
src/: Dockerfile  main.py
src/api/: authentication.py  dependecies.py  dependencies.py  messages.py  users.py
src/db/: database.py
src/models/: users.py
src/schemas/: messages.py
src/services/: messages.py  users.py
src/utils/: repository.py  storage.py
